js/js.translator/testData/incremental/invalidation/companionProperties/lib1/l1.5.kt
class MyClass {
    companion object {
        konst intProperty = 2
        konst pairProperty = -1 to 2
        konst funcProperty = { 2 }
    }
}
